# fabric-ingestion

./: .coverage  .pre-commit-config.yaml  pyproject.toml  requirementes.txt  requirements-dev.txt  setup.py
.github/workflows/: create-release-branch.yml  finalize-release.yml
fabric_ingestion/: __init__.py
fabric_ingestion/base/: __init__.py  pipeline_base.py  pipeline_config.py
fabric_ingestion/logging/: __init__.py  ingestion_logger.py
fabric_ingestion/mocks/: __init__.py  notebook_utils_mock.py
fabric_ingestion/sources/: __init__.py  lake_to_lake.py
fabric_ingestion/steps/: __init__.py  dedup_step.py  schema_sanitizer.py
fabric_ingestion/strategies/: __init__.py
fabric_ingestion/strategies/readers/: __init__.py  delta_read_strategy.py  parquet_read_strategy.py  read_strategy.py  spark_format_read_strategy.py
fabric_ingestion/strategies/writers/: __init__.py  full_load_strategy.py  merge_strategy.py  write_strategy.py
tests/: __init__.py  conftest.py
tests/integration/: test_lake_to_lake_pipeline.py
tests/unit/base/: test_pipeline_base.py  test_pipeline_config.py
tests/unit/mocks/: test_notebook_utils_mock.py
tests/unit/steps/: test_dedup_step.py  test_schema_sanitizer.py
tests/unit/strategies/readers/: test_read_strategies.py
tests/unit/strategies/writers/: test_write_strategies.py
