[project]
name = "fabric-ingestion"
version = "0.1.0"
description = "Framework de ingestão de dados para Microsoft Fabric (Lake-to-Lake, Template Method + Strategy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adlfs>=2024.2.0",
    "delta-spark>=3.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.4",
    "pyspark>=3.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "semantic-link>=0.7.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fabric_ingestion"]
